# projectUpdated

./: Addition.h  BinaryExp.cpp  BinaryExp.h  BindCommand.cpp  BindCommand.h  CMakeLists.txt  Command.h  CommandExpression.h  CommandShuntYard.cpp  CommandShuntYard.h  Condition.h  ConditionCommand.h  ConditionParser.cpp  ConditionParser.h  Data.cpp  Data.h  DataBase.cpp  DataBase.h  DataReaderServer.cpp  DataReaderServer.h  DefineVar.h  Division.h  DoCommand.h  EqualsCommand.cpp  EqualsCommand.h  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  FileLexer.cpp  FileLexer.h  Lexer.cpp  Lexer.h  MathExpression.h  MathShuntYard.cpp  MathShuntYard.h  MultiCommand.h  MultiCommandcpp  Multiply.h  MyExpression.h  Num.h  (+29 more)
ConditionalCommands/: AllConditions.h  EqualsEquals.h  GreaterOrEqual.h  GreaterThan.h  IfCommand.h  LoopCommand.cpp  LoopCommand.h  SmallerOrEqual.h  SmallerThan.h  WhileCommand.h
doMath/: Addition.h  AllMath.h  Division.h  Multiply.h  Num.h  Subtraction.h
